# exercise_opengl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/audio/: audio_file.h  audio_manager.h
include/game/: animation.h  animation_type.h  ball.h  brick.h  button.h  button_state.h  game.h  game_level.h  game_object.h  game_state.h  menu.h  player.h  power_up.h  power_up_type.h
include/graphics/: font.h  glyph_info.h  particle.h  particle_emitter.h  post_processing_effect.h  post_processor.h  shader.h  shader_data.h  shader_type.h  sprite_renderer.h  text_renderer.h  texture.h
include/input/: event_handlers.h  input_manager.h  input_mouse.h
include/physics/: collision.h  collision_detector.h  direction.h
include/resources/: assets_loader.h  resource_manager.h  singleton.h  window.h  window_manager.h
include/utils/: file_manager.h  random.h
resources/levels/: 3.txt  4.txt  5.txt  6.txt
resources/shaders/postprocessing/: shader.frag  shader.vert
resources/shaders/sprite/: shader.frag
src/: main.cpp
src/audio/: audio_manager.cpp
src/game/: ball.cpp  brick.cpp  button.cpp  game.cpp  game_level.cpp  game_object.cpp  menu.cpp  player.cpp  power_up.cpp
src/graphics/: particle_emitter.cpp  post_processor.cpp  shader.cpp  shader_data.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp
src/input/: input_manager.cpp
src/physics/: collision_detector.cpp
src/resources/: assets_loader.cpp  resource_manager.cpp  window.cpp  window_manager.cpp
src/utils/: file_manager.cpp  random.cpp
